Fixed issue with the text for the About Us link wrapping due to font size being too large.

--- a/css/index.css
+++ b/css/index.css
@@ -218,6 +218,11 @@ img {
   font-size: 1.6rem;
   padding: 12.5px 17.5px;
 }
+@media (max-width: 500px) {
+  .nav-area nav .nav-area--text-links a {
+    font-size: 1.4rem;
+  }
+}
 .nav-area nav .nav-area--text-links a:hover {
   background-color: #cccccc;
   color: #FFFFFF;
