--- a/less/navigation.less
+++ b/less/navigation.less
@@ -36,6 +36,10 @@
                 font-size: 1.6rem;
                 padding: 12.5px 17.5px;
 
+                @media @device-size[mobile] {
+                    font-size: 1.4rem;
+                }
+
                 &:hover {
                     background-color: darken(@white, 20%);
                     color: @white;
